# pico-sdk-template

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
